--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/svg-captcha@1.4.0/index.js"></script>
 </head>
 <body>
 <div id="captcha"></div>
