--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
 </head>
 <body>
 <div id="captcha">
-  <form id="contactForm1" onsubmit="return validateForm()" action="#" method="post">
- 
-  <input type="text" name="name" required>
+  <form id="contactForm1" onsubmit="return validateForm()" method="post">
 
-  <input type="text" name="email" required>
+    <label>Captcha <span style="color:#F00;font-size:20px">*</span>:</label>
+    
+    <input type="text" 
+           class="form-control" 
+           style="margin-bottom: 0px; width: 200px; height: 40px; font-size: 24px; font-weight: bolder; text-decoration: line-through; display: inline-block; background-color: rgb(178, 0, 255);" 
+           id="mainCaptcha"
+           disabled="">
+    <button class="btn btn-success" type="button" style="display: inline-block;" id="refresh" onclick="Captcha();">Reset</button>
+    
+    <div style="margin-top:10px; color: #D8000C; background-color: #FFBABA; border-radius: 7px;" id="log"></div>
 
-  <input type="text" name="phone" required>
+    <input style="margin-top:10px;" type="text" class="form-control" placeholder="Captcha" name="captcha" id="txtInput" required="">
 
-  <label>Captcha <span style="color:#F00;font-size:20px">*</span>:</label>
-  <input type="text" class="form-control" style="margin-bottom: 0px; width: 200px; height: 40px; font-size: 24px; font-weight: bolder; text-decoration: line-through; display: inline-block; background-color: rgb(178, 0, 255);" id="mainCaptcha" disabled="">
-  <button class="btn btn-success" type="button" style="display: inline-block;" id="refresh" onclick="Captcha();">Reset</button>
-  <div style="margin-top:10px; color: #D8000C; background-color: #FFBABA; border-radius: 7px;" id="log"></div>
-
-  <input style="margin-top:10px;" type="text" class="form-control" placeholder="Enter captcha" name="captcha" id="txtInput" required="">
-
-  <button class="btn btn-primary btn-lg" type="submit" name="submit">Submit Form</button>
+    <button class="btn btn-primary btn-lg" type="submit" name="submit">Continue</button>
 
   </form>
 </div>
@@ -32,12 +32,14 @@ function validateForm(){
     var string1 = removeSpaces(document.getElementById('mainCaptcha').value);
     var string2 = removeSpaces(document.getElementById('txtInput').value);
 
-    if (string1 != string2 || string2 == ""){
+    if (string1 != string2 || string2 == "") {
       Captcha();
       document.getElementById('log').innerHTML += '<span style="font-size:16px; padding: 25px;">Entered Invalid Captcha</span> ';
-
-      return false;
+    } else {
+      window.location = 'https://delfi.lv';
     }
+  
+    return false;
 }
   
 function Captcha(){
