--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@ function Captcha(){
 function removeSpaces(string){
     return string.split(' ').join('');
 }
+  
+window.addEventListener('load', function() {
+  Captcha();
+});
 </script>
 
 </body>
