--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 </head>
 <body>
