--- a/index.html
+++ b/index.html
@@ -24,44 +24,30 @@
   </style>
 </head>
 <body class="text-center">
-  <form class="form-signin">
-  <img class="mb-4" src="https://getbootstrap.com/docs/4.5/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
-  <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-  <label for="inputEmail" class="sr-only">Email address</label>
-  <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-  <label for="inputPassword" class="sr-only">Password</label>
-  <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-  <div class="checkbox mb-3">
-    <label>
-      <input type="checkbox" value="remember-me"> Remember me
-    </label>
-  </div>
-  <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-  <p class="mt-5 mb-3 text-muted">&copy; 2017-2020</p>
-</form>
- 
-  
-<div id="captcha">
-  <form id="contactForm1" onsubmit="return validateForm()" method="post">
+ <div>
+  <form class="form-signin" onsubmit="return validateForm()" id="captcha">
+    <img class="mb-4" src="https://getbootstrap.com/docs/4.5/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
+    <h1 class="h3 mb-3 font-weight-normal">Are you human?</h1>
 
-    <label>Captcha <span style="color:#F00;font-size:20px">*</span>:</label>
-    
     <input type="text" 
-           class="form-control" 
-           style="margin-bottom: 0px; width: 200px; height: 40px; font-size: 24px; font-weight: bolder; text-decoration: line-through; display: inline-block; background-color: rgb(178, 0, 255);" 
-           id="mainCaptcha"
-           disabled="">
+       class="form-control" 
+       style="margin-bottom: 0px; width: 200px; height: 40px; font-size: 24px; font-weight: bolder; text-decoration: line-through; display: inline-block; background-color: rgb(178, 0, 255);" 
+       id="mainCaptcha"
+       disabled="">
     <button class="btn btn-success" type="button" style="display: inline-block;" id="refresh" onclick="Captcha();">Reset</button>
-    
-    <div style="margin-top:10px; color: #D8000C; background-color: #FFBABA; border-radius: 7px;" id="log"></div>
 
-    <input style="margin-top:10px;" type="text" class="form-control" placeholder="Captcha" name="captcha" id="txtInput" required="">
+    <label for="inputCaptcha" class="sr-only">Email address</label>
 
-    <button class="btn btn-primary btn-lg" type="submit" name="submit">Continue</button>
+    <input type="text" id="txtInput" name="captcha" class="form-control" placeholder="Captcha" required autofocus>
+    <button class="btn btn-lg btn-primary btn-block" type="submit">I am not a robot!</button>
 
+    <div class="alert alert-warning" role="alert">
+      <span id="log"></span>
+    </div>
+
+    <p class="mt-5 mb-3 text-muted">&copy; 2020</p>
   </form>
-</div>
-  
+</div>  
   
 <script type="text/javascript">
 function validateForm(){
