--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
      style="margin-bottom: 0px; width: 200px; height: 40px; font-size: 24px; font-weight: bolder; text-decoration: line-through; display: inline-block; background-color: rgb(178, 0, 255);" 
      id="mainCaptcha"
      disabled="">
-  <button class="btn btn-success" type="button" style="display: inline-block;" id="refresh" onclick="Captcha();">Reset</button>
+  <button class="btn btn-info" type="button" style="display: inline-block; margin-top=-1em;" id="refresh" onclick="Captcha();">Refresh</button>
 
   <label for="inputCaptcha" class="sr-only">Email address</label>
 
