--- a/index.html
+++ b/index.html
@@ -35,12 +35,10 @@
      disabled="">
   <button class="btn btn-info" type="button" style="display: inline-block; margin-top=-1em;" id="refresh" onclick="Captcha();">Refresh</button>
 
-  <label for="inputCaptcha" class="sr-only">Email address</label>
-
-  <input type="text" id="txtInput" name="captcha" class="form-control" placeholder="Captcha" required autofocus>
+  <input type="text" id="txtInput" name="captcha" class="form-control mt-1" placeholder="Enter captcha" required autofocus>
   <button class="btn btn-lg btn-primary btn-block" type="submit">Continue</button>
 
-  <div class="alert alert-warning d-none" role="alert" id="logContainer">
+  <div class="alert alert-warning d-none mt-1" role="alert" id="logContainer">
     <span id="log"></span>
   </div>
 
