--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
+  <link rel="shortcut icon" href="apple-touch-icon-18b42bddd9d5db513d46f7c22955c0c5.png" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
   <link rel="stylesheet" href="https://getbootstrap.com/docs/4.5/examples/sign-in/signin.css" />
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
@@ -25,7 +26,7 @@
 </head>
 <body class="text-center">
 <form class="form-signin" onsubmit="return validateForm()" id="captcha">
-  <img class="mb-4" src="https://getbootstrap.com/docs/4.5/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
+  <img class="mb-4" src="apple-touch-icon-18b42bddd9d5db513d46f7c22955c0c5.png" alt="" width="72" height="72">
   <h1 class="h3 mb-3 font-weight-normal">Are you human?</h1>
 
   <input type="text" 
