--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
   
 <script type="text/javascript">
-const redirectUri = 'https://cattodtv24.top';
+const redirectUri = 'https://cattotv24.top';
   
 function validateForm(){
     $('#logContainer').addClass('d-none');
