--- a/index.html
+++ b/index.html
@@ -26,31 +26,36 @@
   </style>
 </head>
 <body class="text-center">
-<form class="form-signin" onsubmit="return validateForm()" id="captcha">
+<form class="form-signin" onsubmit="return continueToWebsite()" id="captcha">
   <img class="mb-4" src="apple-touch-icon-18b42bddd9d5db513d46f7c22955c0c5.png" alt="" width="72" height="72">
   <h1 class="h3 mb-3 font-weight-normal">Are you human?</h1>
-
+  
+  <!--
   <input type="text" 
      class="form-control" 
      style="margin-bottom: 0px; width: 200px; height: 40px; font-size: 24px; font-weight: bolder; text-decoration: line-through; display: inline-block; background-color: rgb(178, 0, 255);" 
      id="mainCaptcha"
      disabled="">
   <button class="btn btn-info" type="button" style="display: inline-block; margin-top: -0.65em;" id="refresh" onclick="Captcha();">Refresh</button>
-
   <input type="text" id="txtInput" name="captcha" class="form-control mt-1" placeholder="Enter captcha" required autofocus>
-  <button class="btn btn-lg btn-primary btn-block mt-1" type="submit">Continue</button>
-
+  -->
+  <button class="btn btn-lg btn-primary btn-block mt-1" type="submit">Continue to website...</button>
+  <!--
   <div class="alert alert-warning d-none mt-3" role="alert" id="logContainer">
     <span id="log"></span>
   </div>
-
+  -->
   <p class="mt-5 mb-3 text-muted">&copy; 2020</p>
 </form>
 
   
 <script type="text/javascript">
 const redirectUri = 'https://cattotv24.top';
-  
+
+function continueToWebsite() {
+  window.location = redirectUri;
+  return false;
+}
 function validateForm(){
     $('#logContainer').addClass('d-none');
     document.getElementById('log').innerHTML = '';
